feat(java deprecated): remove deprecated usage of new Long in favor of Long.valueOf