@@ -300,14 +300,14 @@ public class FeatureCreationIT extends AbstractFeatureMultitenantServiceIT {
                                                                                      PageRequest.of(0, 100));
         Assert.assertEquals(nbValid, results.getContent().size());
         Assert.assertEquals(nbValid, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.CREATION,
                                                      FeatureRequestsSelectionDTO.build().withState(RequestState.ERROR),
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(0, results.getContent().size());
         Assert.assertEquals(0, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.CREATION,
                                                      FeatureRequestsSelectionDTO.build()
@@ -318,7 +318,7 @@ public class FeatureCreationIT extends AbstractFeatureMultitenantServiceIT {
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(1, results.getContent().size());
         Assert.assertEquals(1, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.CREATION,
                                                      FeatureRequestsSelectionDTO.build()
@@ -331,7 +331,7 @@ public class FeatureCreationIT extends AbstractFeatureMultitenantServiceIT {
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(0, results.getContent().size());
         Assert.assertEquals(0, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.CREATION,
                                                      FeatureRequestsSelectionDTO.build()
@@ -345,7 +345,7 @@ public class FeatureCreationIT extends AbstractFeatureMultitenantServiceIT {
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(1, results.getContent().size());
         Assert.assertEquals(1, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
     }
 
     @Test
