@@ -209,14 +209,14 @@ public class FeatureDeletionIT extends AbstractFeatureMultitenantServiceIT {
                                                                                      PageRequest.of(0, 100));
         Assert.assertEquals(nbValid, results.getContent().size());
         Assert.assertEquals(nbValid, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.DELETION,
                                                      FeatureRequestsSelectionDTO.build().withState(RequestState.ERROR),
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(0, results.getContent().size());
         Assert.assertEquals(0, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.DELETION,
                                                      FeatureRequestsSelectionDTO.build()
@@ -226,7 +226,7 @@ public class FeatureDeletionIT extends AbstractFeatureMultitenantServiceIT {
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(0, results.getContent().size());
         Assert.assertEquals(0, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.DELETION,
                                                      FeatureRequestsSelectionDTO.build()
@@ -236,21 +236,21 @@ public class FeatureDeletionIT extends AbstractFeatureMultitenantServiceIT {
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(nbValid, results.getContent().size());
         Assert.assertEquals(nbValid, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.DELETION,
                                                      FeatureRequestsSelectionDTO.build().withProviderId("id1"),
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(1, results.getContent().size());
         Assert.assertEquals(1, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.DELETION,
                                                      FeatureRequestsSelectionDTO.build().withProviderId("id2"),
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(1, results.getContent().size());
         Assert.assertEquals(1, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
     }
 
     @Test
