@@ -186,7 +186,7 @@ public class FeatureNotificationServiceIT extends AbstractFeatureMultitenantServ
                                                                                      PageRequest.of(0, 100));
         Assert.assertEquals(0, results.getContent().size());
         Assert.assertEquals(0, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         // Notify them
         List<FeatureUniformResourceName> urns = this.featureRepo.findAll()
@@ -200,14 +200,14 @@ public class FeatureNotificationServiceIT extends AbstractFeatureMultitenantServ
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(nbValid, results.getContent().size());
         Assert.assertEquals(nbValid, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.NOTIFICATION,
                                                      FeatureRequestsSelectionDTO.build().withState(RequestState.ERROR),
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(0, results.getContent().size());
         Assert.assertEquals(0, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.NOTIFICATION,
                                                      FeatureRequestsSelectionDTO.build()
@@ -217,7 +217,7 @@ public class FeatureNotificationServiceIT extends AbstractFeatureMultitenantServ
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(0, results.getContent().size());
         Assert.assertEquals(0, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
 
         results = this.featureRequestService.findAll(FeatureRequestTypeEnum.NOTIFICATION,
                                                      FeatureRequestsSelectionDTO.build()
@@ -227,7 +227,7 @@ public class FeatureNotificationServiceIT extends AbstractFeatureMultitenantServ
                                                      PageRequest.of(0, 100));
         Assert.assertEquals(nbValid, results.getContent().size());
         Assert.assertEquals(nbValid, results.getTotalElements());
-        Assert.assertEquals(new Long(0), results.getInfo().getNbErrors());
+        Assert.assertEquals(Long.valueOf(0), results.getInfo().getNbErrors());
     }
 
     @Test
